name:
  json-incremental-decoder
version:
  0.1
synopsis:
  A parser-agnostic declarative API for querying JSON-documents
description:
category:
  Data, JSON, Parsing
homepage:
  https://github.com/nikita-volkov/json-incremental-decoder 
bug-reports:
  https://github.com/nikita-volkov/json-incremental-decoder/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2016, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/json-incremental-decoder.git


library
  hs-source-dirs:
    library
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  other-modules:
    JSONIncrementalDecoder.Prelude
    JSONIncrementalDecoder.Parsers
    JSONIncrementalDecoder.SupplementedParsers
    JSONIncrementalDecoder.DSL
  exposed-modules:
  build-depends:
    -- 
    monad-par >= 0.3.4 && < 0.4,
    -- 
    attoparsec >= 0.13 && < 0.14,
    --
    bytestring >= 0.10 && < 0.12,
    text == 1.*,
    scientific == 0.3.*,
    unordered-containers >= 0.2.6 && < 0.3,
    vector >= 0.10 && < 0.12,
    hashable >= 1.2 && < 2,
    --
    success >= 0.2.6 && < 0.3,
    matcher >= 0.1 && < 0.2,
    interspersed >= 0.1 && < 0.2,
    unsequential >= 0.4 && < 0.5,
    supplemented >= 0.2 && < 0.3,
    free >= 4.12 && < 5,
    transformers >= 0.4 && < 0.6,
    base-prelude < 2
